--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
             <h2>A Transformational Opportunity</h2>
             <hr>
             <h2>Introduction: Partnering in the Mission of the Kingdom</h2>
-            <p>This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God. By embracing the principles of sowing and reaping, this initiative empowers participants to experience financial freedom, deepen their faith, and transform communities.
+            <p>This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God...</p>
+            <!--This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God. By embracing the principles of sowing and reaping, this initiative empowers participants to experience financial freedom, deepen their faith, and transform communities.
 
 At the core of this program is the power of generosity. Participants sow a one-time donation of $1,222, reaping 90% of subsequent donations generated through their affiliate links. This model not only fosters financial independence but also drives Kingdom-focused initiatives that restore families, communities, and dreams.
 
@@ -262,11 +263,10 @@ Let us labor together for the glory of God and the joy of His people.
 
 Next Steps
 
-Schedule a meeting to discuss implementation with me, Cody Haskins, on the buuton below and title the subject "Spirit of Genorosity".
+Schedule a meeting to discuss implementation with me, Cody Haskins, @ rpareapercody@gmail.com and title the subject "Spirit of Genorosity".
 Review financial projections and impact models based on your influence/ Church congregants.
 Commit to launching this program as a Kingdom partner.
-Together, we can transform lives and communities, declaring: “Behold, I am making all things new.” (Revelation 21:5)..</p>
-            <!-- Add the rest of your proposal content here -->
+Together, we can transform lives and communities, declaring: “Behold, I am making all things new.” (Revelation 21:5)-->
             <a href="mailto:rpareapercody@gmail.com?subject=Spirit of Generosity" class="cta-button">Contact Cody Haskins</a>
         </div>
     </div>
