--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Let us labor together for the glory of God and the joy of His people.
 
 Next Steps
 
-Schedule a meeting to discuss implementation with me, Cody Haskins, @ rpareapercody@gmail.com and title the subject "Spirit of Genorosity".
+Schedule a meeting to discuss implementation with me, Cody Haskins, below and title the subject "Spirit of Genorosity".
 Review financial projections and impact models based on your influence/ Church congregants.
 Commit to launching this program as a Kingdom partner.
 Together, we can transform lives and communities, declaring: “Behold, I am making all things new.” (Revelation 21:5)
