--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: red; /* Red text for the body */
+            color: black; /* Black text for the body */
             margin: 0;
-            background: url('Oil well of life.webp') no-repeat center center fixed;
+            background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
         }
 
@@ -278,3 +278,4 @@
     </div>
 </body>
 </html>
+
