--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             line-height: 1.6;
             color: black; /* Black text for the body */
             margin: 0;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('Oil well of life.webp') no-repeat center center fixed;
             background-size: cover;
         }
 
