--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: black; /* Black text for the body */
+            color: gold; /* Black text for the body */
             margin: 0;
             background: url('Oil well of life.webp') no-repeat center center fixed;
             background-size: cover;
