--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: url('your-background-image.jpg') no-repeat center center fixed;
+            background: url('Oil well of life.webp') no-repeat center center fixed;
             background-size: cover;
             color: gold;
             line-height: 1.6;
