--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
         h1 {
             font-size: 2rem;
         }
-        p, ul, li {
+        p, ul, li, ol {
             margin-bottom: 16px;
             text-align: justify;
         }
-        ul {
+        ul, ol {
             padding-left: 20px;
+        }
+        strong {
+            color: lightgoldenrodyellow;
         }
         a {
             color: gold;
@@ -59,6 +62,7 @@
     <div class="container">
         <h1>Proposal for Partnership: Advancing the Kingdom of God Through Generosity</h1>
         <h2>A Transformational Opportunity</h2>
+
         <h3>Introduction: Partnering in the Mission of the Kingdom</h3>
         <p>
             This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God. By embracing the principles of sowing and reaping, this initiative empowers participants to experience financial freedom, deepen their faith, and transform communities.
@@ -70,23 +74,30 @@
         <h2>Program Overview: The Generosity Model</h2>
         <h3>How It Works</h3>
         <ol>
-            <li><strong>$1,222 Initial Donation:</strong> Participants commit to a one-time donation, symbolizing faith in God's provision and a desire to invest in Kingdom-building efforts.</li>
-            <li><strong>90% Reaping:</strong>
+            <li>
+                <strong>$1,222 Initial Donation:</strong> Participants commit to a one-time donation, symbolizing faith in God's provision and a desire to invest in Kingdom-building efforts.
+            </li>
+            <li>
+                <strong>90% Reaping:</strong>
                 <ul>
                     <li>Participants earn 90% of every subsequent $1,222 donation made through their unique affiliate link.</li>
                     <li>This creates a system of financial freedom, breaking the cycle of the "daily grind" and empowering individuals to focus on their God-given callings.</li>
                 </ul>
             </li>
-            <li><strong>10% Kingdom Allocation:</strong>
+            <li>
+                <strong>10% Kingdom Allocation:</strong>
                 <ul>
-                    <li><strong>9% for the Kingdom Mission ("Son of Man" Belief System):</strong> Dedicated to advancing a vision rooted in the teachings of Jesus to:
+                    <li>
+                        <strong>9% for the Kingdom Mission ("Son of Man" Belief System):</strong> Dedicated to advancing a vision rooted in the teachings of Jesus to:
                         <ul>
                             <li>Restore families to love and purpose.</li>
                             <li>Reduce poverty and isolation.</li>
                             <li>Create thriving, Spirit-filled communities where dreams are reignited and lives are transformed.</li>
                         </ul>
                     </li>
-                    <li><strong>1% for Cody Haskins:</strong> Stewarded by Cody Haskins to ensure the continued growth and refinement of this initiative to make a global impact with Holy Spirit-empowered generosity.</li>
+                    <li>
+                        <strong>1% for Cody Haskins:</strong> As the co-creator with God of this initiative, I, Cody Haskins, will steward this portion to ensure the continued growth and refinement, to make a global impact with Holy Spirit-empowered generosity.
+                    </li>
                 </ul>
             </li>
         </ol>
@@ -97,14 +108,16 @@
             Participants who engage in the program experience a shift from the toil of earning money through time-bound labor to financial freedom rooted in Kingdom principles. By sowing into this program:
         </p>
         <ul>
-            <li><strong>Financial Freedom:</strong> The 90% reaping allows participants to create passive income streams, enabling them to:
+            <li>
+                <strong>Financial Freedom:</strong> The 90% reaping allows participants to create passive income streams, enabling them to:
                 <ul>
                     <li>Spend more time with family.</li>
                     <li>Invest in their spiritual growth.</li>
                     <li>Pursue God’s calling for their lives.</li>
                 </ul>
             </li>
-            <li><strong>Community Empowerment:</strong> With increased financial resources, participants can:
+            <li>
+                <strong>Community Empowerment:</strong> With increased financial resources, participants can:
                 <ul>
                     <li>Support local ministries and outreach programs.</li>
                     <li>Become conduits of generosity in their communities.</li>
@@ -118,10 +131,10 @@
             The <strong>9% allocation</strong> for the "Son of Man" belief system fuels participating churches to:
         </p>
         <ul>
-            <li><strong>Restore Families:</strong> Counseling, family resources, and support.</li>
-            <li><strong>Reduce Poverty:</strong> Skills training, business support, and targeted aid programs.</li>
-            <li><strong>Create Thriving Communities:</strong> Establish mentorship hubs and education centers.</li>
-            <li><strong>Inspire Dreams:</strong> Empower individuals to pursue God-given visions without financial constraints.</li>
+            <li><strong>Restore Families:</strong> Provide counseling and support to families in crisis. Offer resources to strengthen marriages and parent-child relationships.</li>
+            <li><strong>Reduce Poverty:</strong> Fund skills training and small business creation. Support programs that address root causes of poverty.</li>
+            <li><strong>Create Thriving Communities:</strong> Establish centers for mentorship, education, and spiritual growth. Build networks of Spirit-filled believers who serve as light and salt in their communities.</li>
+            <li><strong>Inspire Dreams and Freedom:</strong> Empower individuals to pursue their God-given visions without financial constraints. Break the chains of hopelessness and inspire confidence in God's provision.</li>
         </ul>
 
         <h2>Biblical Foundation for Generosity and Impact</h2>
@@ -129,35 +142,71 @@
             This initiative is grounded in the expressed image of Jesus and the principles of the Kingdom of God:
         </p>
         <ul>
-            <li>"The Kingdom of Heaven is like a mustard seed..." (<strong>Matthew 13:31-32</strong>)</li>
+            <li>"The Kingdom of Heaven is like a mustard seed... Though it is the smallest of all seeds, when it grows, it is the largest of garden plants and becomes a tree, so that the birds come and perch in its branches." (<strong>Matthew 13:31-32</strong>)</li>
             <li>"Freely you have received; freely give." (<strong>Matthew 10:8</strong>)</li>
-            <li>"The Son of Man came not to be served, but to serve." (<strong>Matthew 20:28</strong>)</li>
+            <li>"The Son of Man came not to be served, but to serve, and to give his life as a ransom for many." (<strong>Matthew 20:28</strong>)</li>
         </ul>
 
-        <h2>Projected Reach and Community Impact</h2>
         <p>
-            By targeting just <strong>0.5% of the Christian population</strong> in the U.S. and Europe (~2.5 million individuals), this program could generate <strong>$3 billion</strong> in donations.
+            This program invites participants to embody the teachings of Jesus by sowing generously and reaping abundantly, all while serving as co-laborers in advancing the Kingdom of God.
+        </p>
+
+        <h2>Projected Reach and Community Impact</h2>
+        <h3>Christian Population</h3>
+        <p>
+            Target Demographic: ~500 million Christians across the U.S. and Europe. Reaching 0.5% (2.5 million individuals) at $1,222 generates $3 billion in donations.
+        </p>
+
+        <h3>Affiliate Model</h3>
+        <p>
+            Participants sharing their affiliate links with just 30 people generate:
+        </p>
+        <p><strong>30 x $1,222 x 90% = $32,994 per participant.</strong> (Mark 4:20 - "30, 60, and 100 fold")
+        </p>
+        <p>This revenue empowers individuals to reinvest in their communities, ministries, and dreams.</p>
+
+        <h3>Community Impact Breakdown</h3>
+        <p>$3 billion raised through 0.5% of the demographic:</p>
+        <ul>
+            <li>$2.7 billion (90%) distributed to participants.</li>
+            <li>$270 million (9%) fuels Kingdom mission projects.</li>
+            <li>$30 million (1%) supports Holy Spirit generosity stewardship and expansion.</li>
+        </ul>
+
+        <h2>Scalability and Growth Strategy</h2>
+        <h3>SEO-Driven Growth</h3>
+        <p>
+            A high-performance SEO bot ensures affiliate links remain visible and competitive, driving traffic and conversions across online platforms. By optimizing keywords for Christian giving and passive income seekers, the program reaches diverse demographics effectively.
+        </p>
+
+        <h3>Global Expansion</h3>
+        <p>
+            <strong>Phase 1:</strong> Target the U.S. and Europe.<br>
+            <strong>Phase 2:</strong> Expand to other regions, including Africa, Asia, and South America, to foster global Kingdom impact.
         </p>
 
         <h2>Call to Action: Partner with Us to Advance the Kingdom</h2>
         <p>
-            Now is your opportunity to join a movement that aligns with Jesus’ mission to proclaim the gospel, restore lives, and bring freedom.
+            NOW, this is your opportunity to join a movement that aligns with Jesus’ mission to proclaim the gospel, restore lives, and bring freedom. Together, we can:
         </p>
         <ul>
-            <li>Empower your community with Kingdom principles of generosity.</li>
+            <li>Empower your friends, family, and community to live out Kingdom principles of giving and reaping.</li>
             <li>Transform communities by addressing poverty, restoring families, and inspiring dreams.</li>
             <li>Expand God’s Kingdom through sustainable generosity and faith-driven initiatives.</li>
         </ul>
-        <p>
-            **“Behold, I am making all things new.” (Revelation 21:5)**
-        </p>
 
-        <h3>Next Steps</h3>
-        <ol>
-            <li>Schedule a meeting with Cody Haskins at <a href="mailto:rpareapercody@gmail.com">rpareapercody@gmail.com</a> (Subject: "Spirit of Generosity").</li>
-            <li>Review projections and impact models.</li>
+        <p><strong>"The Kingdom of God is at hand." (<i>Mark 1:15</i>)</strong></p>
+
+        <p>Will you partner with us to sow into the vision of Jesus and reap a harvest that brings life, freedom, and transformation to the world?</p>
+
+        <h2>Next Steps</h2>
+        <ul>
+            <li>Schedule a meeting to discuss implementation with me, Cody Haskins, @ <a href="mailto:rpareapercody@gmail.com">rpareapercody@gmail.com</a> and title the subject "Spirit of Generosity".</li>
+            <li>Review financial projections and impact models based on your influence/Church congregants.</li>
             <li>Commit to launching this program as a Kingdom partner.</li>
-        </ol>
+        </ul>
+        <p>Together, we can transform lives and communities, declaring: <strong>"Behold, I am making all things new." (<i>Revelation 21:5</i>)</strong></p>
     </div>
 </body>
 </html>
+
