--- a/index.html
+++ b/index.html
@@ -206,6 +206,27 @@
             <li>Commit to launching this program as a Kingdom partner.</li>
         </ul>
         <p>Together, we can transform lives and communities, declaring: <strong>"Behold, I am making all things new." (<i>Revelation 21:5</i>)</strong></p>
+   <!-- Learn More Button -->
+<button id="learnMoreButton" style="
+    background-color: #3498db;
+    color: red;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;">
+    Learn More
+</button>
+
+<script>
+    // Add click functionality to the button
+    document.getElementById('learnMoreButton').addEventListener('click', function() {
+        // Redirect to a URL or perform an action
+        window.location.href = "https://example.com"; // Replace with your desired URL
+    });
+</script>
+
     </div>
 </body>
 </html>
