--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     // Add click functionality to the button
     document.getElementById('learnMoreButton').addEventListener('click', function() {
         // Redirect to a URL or perform an action
-        window.location.href = "https://example.com"; // Replace with your desired URL
+        window.location.href = "https://lifeabundantly.github.io/kingdom-affiliate-impact/"; // Replace with your desired URL
     });
 </script>
 
