--- a/index.html
+++ b/index.html
@@ -184,5 +184,34 @@
             Powered by the Kingdom of God - We stand together in faith, hope, and love, building a better world.
         </p>
     </footer>
+        <style>
+        .cta-button {
+            display: inline-block;
+            padding: 15px 25px;
+            background-color: #0056b3; /* Customize color */
+            color: white;
+            text-align: center;
+            font-size: 18px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #003d7a; /* Customize hover color */
+        }
+
+        .cta-button-section {
+            text-align: center;
+            margin-top: 40px;
+        }
+        </style>
+        <!-- Call-to-Action (CTA) Button Section -->
+    <div class="cta-button-section">
+        <p>
+            Are you ready to take the next step in your Kingdom journey? Join us today and experience the empowerment of ABBA's Kingdom Donation Program, where financial freedom and spiritual transformation meet.
+        </p>
+        <a href="https://abbaskingdomprogram.com/join-now" class="cta-button">Join Now & Be Part of the Kingdom Mission</a>
+    </div>
 </body>
 </html>
