--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         Your participation in ABBA's Kingdom Donation Program is your declaration of faith in the Kingdom's principles of generosity, multiplication, and the spreading of the love of Jesus. By contributing, you become part of a movement that seeks to impact both believers and non-believers alike, providing opportunities for financial independence and spiritual transformation.
     </p>
     <p>
-        Please note that as a member, you are part of a private association and your involvement is protected as long as you follow the guidelines of the program. There is <strong>no termination clause</strong>, and your membership remains intact as long as donations continue to flow through your affiliate membership account.
+        Please note that as a member, you are part of a private association and your involvement is protected as long as you follow the guidelines of the program. There is <strong>no termination clause</strong>, and your membership remains intact as long as you continue to engage this program though your affiliate membership account.
     </p>
     <h2>Impact of the 90% Donation Reaping Model</h2>
     <h3>Breaking Free from the Workweek Grind</h3>
